--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head><title>My Site</title></head>
 <body>
-<div id='footer'>contact : email.support@github.com</div>
+<div id='footer'>contact : support@github.com</div>
 </body>
 </html>
