Локальное изменение для конфликта

--- a/index.html
+++ b/index.html
@@ -6,3 +6,4 @@
 </html>
 <div id='new_footer'>New footer for issue 53</div>
 <p>Additional footer content for issue 53</p>
+<!-- Локальное изменение -->
