Новый локальный коммит для rebase

--- a/index.html
+++ b/index.html
@@ -9,3 +9,4 @@
 <!-- Локальное изменение -->
 <!-- Изменение на GitHub -->
 <!-- Изменение на GitHub для rebase -->
+<!-- Ещё одно локальное изменение -->
