--- a/index.html
+++ b/index.html
@@ -8,3 +8,4 @@
 <p>Additional footer content for issue 53</p>
 <!-- Локальное изменение -->
 <!-- Изменение на GitHub -->
+<!-- Изменение на GitHub для rebase -->
